--- a/app/src/main/res/layout/fragment_chat_list_item_action_typing.xml
+++ b/app/src/main/res/layout/fragment_chat_list_item_action_typing.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentStart="true"
@@ -9,12 +10,13 @@
     android:layout_marginTop="4dp"
     android:orientation="horizontal">
 
-    <com.linute.linute.UtilsAndHelpers.RoundedCornerImageView
+    <com.makeramen.roundedimageview.RoundedImageView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         
         android:padding="4dp"
         android:visibility="invisible"
+        app:riv_corner_radius="@dimen/user_icon_corner_radius"
         />
 
     <TextView
