--- a/app/src/main/res/layout/fragment_chat_list_item_you.xml
+++ b/app/src/main/res/layout/fragment_chat_list_item_you.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,28 +9,36 @@
     android:layout_marginEnd="48dp"
     android:layout_marginStart="12dp"
     android:layout_marginTop="4dp"
-    android:orientation="horizontal"
     android:clipChildren="true"
-    >
+    android:orientation="horizontal">
 
     <LinearLayout
         android:layout_width="150dp"
         android:layout_height="match_parent"
         android:layout_marginStart="-150dp"
         android:gravity="center_vertical|end"
-        android:padding="12dp"
-        >
+        android:padding="12dp">
 
         <TextView
             android:id="@+id/chat_user_time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="end|center_vertical"
             android:layout_marginStart="4dp"
+            android:gravity="end|center_vertical"
             android:textColor="@color/seperator_color"
             android:textSize="@dimen/sub_font_size"
             tools:text="3:00AM" />
     </LinearLayout>
+
+
+        <com.makeramen.roundedimageview.RoundedImageView
+            android:id="@+id/profile_image"
+            android:layout_width="48dp"
+            android:layout_height="match_parent"
+            android:scaleType="centerInside"
+            android:layout_gravity="center_vertical"
+            app:riv_corner_radius="@dimen/user_icon_corner_radius"
+            />
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -48,8 +55,8 @@
                 android:id="@+id/image"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
-                app:riv_corner_radius="2dp"
-                android:scaleType="centerCrop"/>
+                android:scaleType="centerCrop"
+                app:riv_corner_radius="2dp" />
 
             <ImageView
                 android:id="@+id/cinema_icon"
