--- a/app/src/main/res/layout/fragment_create_chat_selected_users.xml
+++ b/app/src/main/res/layout/fragment_create_chat_selected_users.xml
@@ -11,6 +11,6 @@
         android:padding="6dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:riv_corner_radius="16dp"/>
+        app:riv_corner_radius="@dimen/user_icon_corner_radius"/>
 
 </FrameLayout>
