--- a/app/src/main/res/layout/fragment_rooms_list_item.xml
+++ b/app/src/main/res/layout/fragment_rooms_list_item.xml
@@ -8,15 +8,13 @@
     android:layout_height="wrap_content"
     android:background="?android:selectableItemBackground">
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/rooms_user_image"
         android:layout_width="@dimen/profile_image_radius"
         android:layout_height="@dimen/profile_image_radius"
         android:layout_margin="@dimen/activity_horizontal_margin"
         android:src="@drawable/icon_user"
-        app:civ_border_color="@color/seperator_color"
-        app:civ_border_width="1dp"
-
+        app:riv_corner_radius="@dimen/user_icon_corner_radius"
     />
 
     <LinearLayout
