--- a/app/src/main/res/layout/toolbar_chat.xml
+++ b/app/src/main/res/layout/toolbar_chat.xml
@@ -5,13 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal">
-    <de.hdodenhof.circleimageview.CircleImageView
+    <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/toolbar_chat_user_icon"
         android:layout_width="@dimen/profile_image_radius"
         android:layout_height="@dimen/profile_image_radius"
         android:gravity="center_vertical"
-        app:civ_border_color="@color/colorPrimary"
-        app:civ_border_width="1dp"
+        app:riv_corner_radius="@dimen/user_icon_corner_radius"
           />
     <TextView
         android:id="@+id/toolbar_chat_user_name"
