--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -85,5 +85,6 @@
     <dimen name="snackbar_action_inline_max_width">128dp</dimen>
 
     <dimen name="dsnackbar_text_size">14sp</dimen>
+    <dimen name="user_icon_corner_radius">8dp</dimen>
 
 </resources>
