mute group, ui improvements

--- a/app/src/main/res/layout/fragment_chat_settings.xml
+++ b/app/src/main/res/layout/fragment_chat_settings.xml
@@ -25,38 +25,33 @@
             android:layout_gravity="center"
             />
     </FrameLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#FF000000"
-        />
+
     <TextView
         android:id="@+id/setting_group_name"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="48dp"
         android:text="Group Name"
         android:paddingStart="16dp"
         android:textSize="20sp"
+        android:textColor="@color/eighty_black"
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true"
         android:gravity="center_vertical"/>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#FF000000"
-        />
+
+
     <TextView
         android:id="@+id/setting_notifications_button"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:text="Notifications"
+        android:text="Mute Notifications"
         android:paddingStart="16dp"
+        android:textColor="@color/eighty_black"
+
         android:textSize="20sp"
+        android:background="?attr/selectableItemBackground"
         android:gravity="center_vertical"
         />
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#FF000000"
-        />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list_participants"
         android:layout_width="match_parent"
@@ -72,6 +67,8 @@
         android:text="Leave Group"
         android:paddingStart="16dp"
         android:textSize="20sp"
+        android:background="?attr/selectableItemBackground"
+
         android:layout_gravity="bottom"
         android:gravity="center_vertical"
 
