--- a/app/src/main/res/layout/fragment_chat_settings.xml
+++ b/app/src/main/res/layout/fragment_chat_settings.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fillViewport="true"
-    >
+    android:background="#FFFFFFFF">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,42 +24,90 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="240dp"
-            android:background="@color/grey_color"
+            android:background="#FFCCCCCC"
             android:padding="16dp">
 
             <com.makeramen.roundedimageview.RoundedImageView
                 android:id="@+id/setting_group_image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:layout_gravity="center"
+                android:scaleType="centerCrop"
+                app:riv_corner_radius="@dimen/user_icon_corner_radius"
                 />
         </FrameLayout>
 
-        <TextView
-            android:id="@+id/setting_group_name"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:background="?attr/selectableItemBackground"
-            android:clickable="true"
-            android:gravity="center_vertical"
+            android:layout_height="wrap_content"
             android:paddingStart="16dp"
-            android:text="Group Name"
-            android:textColor="@color/eighty_black"
-            android:textSize="20sp" />
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_gravity="center_vertical"
+                android:padding="4dp"
+                android:src="@mipmap/ic_edit_blue"
+                />
+            <TextView
+                android:id="@+id/setting_group_name"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:gravity="center_vertical"
+                android:text="Group Name"
+                android:paddingStart="16dp"
+
+                android:textColor="@color/eighty_black"
+                android:textSize="16sp" />
+        </LinearLayout>
 
 
-        <TextView
-            android:id="@+id/setting_notifications_button"
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:background="?attr/selectableItemBackground"
-            android:gravity="center_vertical"
+            android:layout_height="wrap_content"
             android:paddingStart="16dp"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_gravity="center_vertical"
+                android:padding="4dp"
+                android:src="@mipmap/ic_notification_bell_blue"
+                />
+            <TextView
+                android:id="@+id/setting_notifications_button"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="48dp"
+                android:background="?attr/selectableItemBackground"
+                android:gravity="center_vertical"
+                android:paddingStart="16dp"
 
-            android:text="Mute Notifications"
-            android:textColor="@color/eighty_black"
-            android:textSize="20sp" />
+                android:text="Notifications"
+                android:textColor="@color/eighty_black"
+                android:textSize="16sp" />
 
+            <TextView
+                android:id="@+id/setting_notifications_indicator"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textColor="#0681FE"
+                android:layout_gravity="right"
+                android:gravity="center_vertical"
+                android:paddingRight="16dp"
+                android:textSize="16sp"
+                />
+        </LinearLayout>
+
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="24dp"
+            android:background="#FFCCCCCC"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/list_participants"
