--- a/app/src/main/res/layout/fragment_chat_settings_add_user.xml
+++ b/app/src/main/res/layout/fragment_chat_settings_add_user.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout android:id="@+id/search_users_list_layout"
-              xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:background="?android:selectableItemBackground"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="horizontal">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="?android:selectableItemBackground"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
     <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/search_users_list_image"
-        android:layout_width="@dimen/profile_image_radius"
-        android:layout_height="@dimen/profile_image_radius"
-        android:layout_margin="@dimen/activity_horizontal_margin"
-        app:riv_corner_radius="@dimen/user_icon_corner_radius"
-    />
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_gravity="center_vertical"
+        android:padding="4dp"
+        android:layout_margin="16dp"
+        />
 
     <TextView
         android:id="@+id/search_users_list_name"
@@ -22,14 +23,12 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginTop="@dimen/activity_horizontal_margin"
-        android:textStyle="bold"
         android:layout_marginBottom="@dimen/activity_horizontal_margin"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:textColor="@color/user_comment_color"
         android:ellipsize="end"
         android:lines="1"
         android:textSize="16sp"
         tools:text="fdsf sfsdf sf dsffdsf sfsdf sf dsffdsf sfs"
-    />
+        />
 
 </LinearLayout>
