--- a/app/src/main/res/layout/toolbar_chat.xml
+++ b/app/src/main/res/layout/toolbar_chat.xml
@@ -10,6 +10,7 @@
         android:layout_width="@dimen/profile_image_radius"
         android:layout_height="@dimen/profile_image_radius"
         android:gravity="center_vertical"
+        android:layout_gravity="center"
         app:riv_corner_radius="@dimen/user_icon_corner_radius"
         android:scaleType="centerCrop"
           />
@@ -18,6 +19,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:layout_gravity="center"
         android:gravity="center_vertical"
         android:textSize="16sp"
         android:textColor="@color/pure_white"
