--- a/app/src/main/res/layout/fragment_rooms_list_item.xml
+++ b/app/src/main/res/layout/fragment_rooms_list_item.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:id="@+id/rooms_list_linear"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rooms_list_linear"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?android:selectableItemBackground">
@@ -14,15 +13,14 @@
         android:layout_height="@dimen/profile_image_radius"
         android:layout_margin="@dimen/activity_horizontal_margin"
         android:src="@drawable/icon_user"
-        app:riv_corner_radius="@dimen/user_icon_corner_radius"
-    />
+        app:riv_corner_radius="@dimen/user_icon_corner_radius" />
 
     <LinearLayout
         android:layout_width="0px"
-        android:layout_weight="1"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_horizontal_margin"
         android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:layout_weight="1"
         android:orientation="vertical">
 
 
@@ -36,7 +34,7 @@
             android:textColor="@color/eighty_black"
             android:textSize="@dimen/header_font_size"
             android:textStyle="bold"
-            tools:text="Naomi Test"/>
+            tools:text="Naomi Test" />
 
 
         <TextView
@@ -47,30 +45,42 @@
             android:maxLines="2"
             android:textColor="@color/fifty_black"
             android:textSize="@dimen/sub_font_size"
-            tools:text="Hey there JobHey there JobHey there JobHey there JobHey there Job"/>
+            tools:text="Hey there JobHey there JobHey there JobHey there JobHey there Job" />
     </LinearLayout>
 
 
-    <LinearLayout android:id="@+id/feed_end_layer"
-                  android:layout_width="32dp"
-                  android:layout_height="wrap_content"
-                  android:layout_margin="@dimen/activity_horizontal_margin"
-                  android:orientation="vertical">
+    <LinearLayout
+        android:id="@+id/feed_end_layer"
+        android:layout_width="32dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
-        <TextView android:id="@+id/room_time_stamp"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:layout_gravity="center_horizontal"
-                  android:text="now"
-                  android:textColor="@color/twentyfive_black"
-                  android:textSize="@dimen/sub_font_size"/>
+        <TextView
+            android:id="@+id/room_time_stamp"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="now"
+            android:textColor="@color/twentyfive_black"
+            android:textSize="@dimen/sub_font_size" />
 
-        <ImageView android:id="@+id/room_unread"
-                   android:layout_width="16dp"
-                   android:layout_height="16dp"
-                   android:layout_gravity="center_horizontal"
-                   android:layout_marginTop="8dp"
-                   android:src="@drawable/unread_message_blue_circle"/>
+       <!-- <ImageView
+            android:id="@+id/room_unread"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_marginTop="8dp"
+            android:src="@drawable/unread_message_blue_circle" />-->
+
+        <ImageView
+            android:id="@+id/room_is_muted"
+            android:layout_width="16dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:src="@mipmap/ic_chat_muted"
+            android:scaleType="centerInside"
+            android:visibility="visible" />
 
     </LinearLayout>
 
