--- a/app/src/main/res/layout/fragment_rooms_list_item.xml
+++ b/app/src/main/res/layout/fragment_rooms_list_item.xml
@@ -4,31 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rooms_list_linear"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="?android:selectableItemBackground">
+    android:layout_height="72dp"
+    android:background="?android:selectableItemBackground"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingTop="4dp"
+    android:paddingBottom="4dp">
 
     <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/rooms_user_image"
-        android:layout_width="@dimen/profile_image_radius"
-        android:layout_height="@dimen/profile_image_radius"
-        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:src="@drawable/icon_user"
-        app:riv_corner_radius="@dimen/user_icon_corner_radius" />
+        app:riv_corner_radius="@dimen/user_icon_corner_radius"
+        android:cropToPadding="false"
+        android:padding="4dp"
+        android:layout_gravity="center" />
 
     <LinearLayout
         android:layout_width="0px"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:gravity="center_vertical"
+        android:layout_marginLeft="8dp">
 
 
         <TextView
             android:id="@+id/rooms_user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
             android:ellipsize="end"
             android:maxLines="1"
             android:textColor="@color/eighty_black"
@@ -42,7 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
-            android:maxLines="2"
+            android:maxLines="1"
             android:textColor="@color/fifty_black"
             android:textSize="@dimen/sub_font_size"
             tools:text="Hey there JobHey there JobHey there JobHey there JobHey there Job" />
@@ -53,18 +58,18 @@
         android:id="@+id/feed_end_layer"
         android:layout_width="32dp"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/activity_horizontal_margin"
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/room_time_stamp"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_height="32dp"
             android:layout_weight="1"
             android:text="now"
             android:textColor="@color/twentyfive_black"
-            android:textSize="@dimen/sub_font_size" />
+            android:textSize="@dimen/sub_font_size"
+            android:gravity="center_vertical" />
 
        <!-- <ImageView
             android:id="@+id/room_unread"
@@ -76,8 +81,7 @@
         <ImageView
             android:id="@+id/room_is_muted"
             android:layout_width="16dp"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="32dp"
             android:src="@mipmap/ic_chat_muted"
             android:scaleType="centerInside"
             android:visibility="visible" />
