--- a/app/src/main/res/layout/fragment_rooms_list_item.xml
+++ b/app/src/main/res/layout/fragment_rooms_list_item.xml
@@ -19,7 +19,8 @@
         app:riv_corner_radius="@dimen/user_icon_corner_radius"
         android:cropToPadding="false"
         android:padding="4dp"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:scaleType="centerCrop" />
 
     <LinearLayout
         android:layout_width="0px"
