--- a/app/src/main/res/layout/toolbar_chat.xml
+++ b/app/src/main/res/layout/toolbar_chat.xml
@@ -13,18 +13,20 @@
         android:layout_gravity="center"
         app:riv_corner_radius="@dimen/user_icon_corner_radius"
         android:scaleType="centerCrop"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
           />
     <TextView
         android:id="@+id/toolbar_chat_user_name"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_weight="1"
         android:layout_gravity="center"
         android:gravity="center_vertical"
         android:textSize="16sp"
         android:textColor="@color/pure_white"
         android:paddingLeft="4dp"
         android:ellipsize="end"
+        android:maxLines="1"
         />
     <!--balances out "up" arrow, making room information to be properly centered-->
     <Space
