removed logs, fixed chat avatar margin

--- a/app/src/main/res/layout/fragment_chat_list_item_you.xml
+++ b/app/src/main/res/layout/fragment_chat_list_item_you.xml
@@ -38,6 +38,7 @@
             android:scaleType="centerInside"
             android:layout_gravity="center_vertical"
             app:riv_corner_radius="@dimen/user_icon_corner_radius"
+            android:layout_marginRight="4dp"
             />
 
     <FrameLayout
