--- a/app/src/main/res/drawable/send_to_checkbox_off.xml
+++ b/app/src/main/res/drawable/send_to_checkbox_off.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="oval">
     <solid
-        android:color="@color/fifty_black"/>
+        android:color="@color/twentyfive_black"/>
     <size
         android:width="24dp"
         android:height="24dp"/>
