--- a/app/src/main/res/layout/friend_search_item.xml
+++ b/app/src/main/res/layout/friend_search_item.xml
@@ -4,7 +4,7 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:background="?android:selectableItemBackground">
+              android:foreground="?android:selectableItemBackground">
 
     <ImageView
         android:id="@+id/friendSearchItem_profile_image"
