--- a/app/src/main/res/layout/view_holder_send_to.xml
+++ b/app/src/main/res/layout/view_holder_send_to.xml
@@ -29,7 +29,7 @@
         android:ellipsize="end"
         android:singleLine="true"
         android:textColor="@color/eighty_black"
-        android:textSize="@dimen/header_font_size"
+        android:textSize="@dimen/body_font_size"
         tools:text="Mike Hunt Smells Bad (VERY VERY BAD)"
     />
 
