--- a/app/src/main/res/layout/toolbar_chat.xml
+++ b/app/src/main/res/layout/toolbar_chat.xml
@@ -5,6 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal">
+    <!--this space is necessary so that the chat image doesn't get cut, not sure why-->
+    <Space
+        android:layout_gravity="left"
+        android:layout_width="16dp"
+        android:layout_height="match_parent" />
     <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/toolbar_chat_user_icon"
         android:layout_width="@dimen/profile_image_radius"
