new mechanics for removing user from user-select

--- a/app/src/main/res/layout/fragment_search_users.xml
+++ b/app/src/main/res/layout/fragment_search_users.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="#FFFFFFFF"
     android:orientation="vertical"
-    tools:context=".MainContent.Chat.SelectUserFragment">
+    tools:context=".MainContent.Chat.SelectUsersFragment">
 
 
     <android.support.v7.widget.Toolbar
