--- a/app/src/main/res/layout/toolbar_chat.xml
+++ b/app/src/main/res/layout/toolbar_chat.xml
@@ -10,7 +10,7 @@
         android:layout_gravity="left"
         android:layout_width="16dp"
         android:layout_height="match_parent" />
-    <com.makeramen.roundedimageview.RoundedImageView
+    <!--<com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/toolbar_chat_user_icon"
         android:layout_width="@dimen/profile_image_radius"
         android:layout_height="@dimen/profile_image_radius"
@@ -20,7 +20,7 @@
         android:scaleType="centerCrop"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
-          />
+          />-->
     <TextView
         android:id="@+id/toolbar_chat_user_name"
         android:layout_width="wrap_content"
