--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,9 +1,9 @@
-<RelativeLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:background="@color/fifty_black"
+    tools:background="@color/colorPrimary"
     tools:context=".LoginAndSignup.LinuteLoginFragment">
 
     <ImageView
@@ -21,28 +21,23 @@
         android:id="@+id/signin_email_login_form"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginTop="80dp"
         android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/signin_create_button"
-            android:layout_width="125dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="16dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/create_button"/>
 
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="-OR-"
-            android:textColor="@color/fifty_white"
+            android:layout_marginBottom="64dp"
+            android:text="log in"
+            android:textAllCaps="true"
+            android:textColor="@color/pure_white"
+            android:textSize="32sp"
+            android:textStyle="bold"
         />
 
 
@@ -74,47 +69,58 @@
             android:theme="@style/MyEditTextTheme"/>
 
 
+        <TextView
+            android:id="@+id/login_forgot_pass"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:padding="@dimen/activity_horizontal_margin"
+            android:text="Forgot your password?"
+            android:textColor="@color/secondaryColor"
+
+        />
+
+
+        <FrameLayout
+            android:id="@+id/frameLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal">
+
+            <ImageView
+                android:id="@+id/signin_signin_button"
+                android:layout_width="125dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:scaleType="fitCenter"
+                android:src="@drawable/login_button"
+            />
+
+            <ProgressBar
+                android:id="@+id/signin_progress_bar"
+                style="?android:attr/progressBarStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="gone"/>
+
+        </FrameLayout>
     </LinearLayout>
 
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/signin_email_login_form"
-        android:layout_centerHorizontal="true"
-    >
-
-        <ImageView
-            android:id="@+id/signin_signin_button"
-            android:layout_width="125dp"
+    <Button android:id="@+id/facebook_login"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:scaleType="fitCenter"
-            android:src="@drawable/login_button"
-        />
-
-        <ProgressBar
-            android:id="@+id/signin_progress_bar"
-            style="?android:attr/progressBarStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:visibility="gone"/>
-
-    </RelativeLayout>
-
-
-    <TextView
-        android:id="@+id/login_forgot_pass"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="@dimen/activity_horizontal_margin"
-        android:text="Forgot password"
-        android:textColor="@color/thirtyfive_white"
-
+            android:layout_gravity="bottom"
+            android:layout_margin="@dimen/activity_horizontal_margin"
+            android:background="@color/facebook_blue"
+            android:foreground="?android:selectableItemBackground"
+            android:paddingBottom="24dp"
+            android:paddingTop="24dp"
+            android:text="log in with Facebook"
+            android:textColor="@color/pure_white"
+            android:textStyle="bold"
     />
 
 
-</RelativeLayout>
+</FrameLayout>
