--- a/app/src/main/res/layout/fragment_signup_options.xml
+++ b/app/src/main/res/layout/fragment_signup_options.xml
@@ -41,7 +41,7 @@
                   android:orientation="vertical"
                   android:weightSum="2">
 
-        <Button android:id="@+id/preLogin_facebook_login"
+        <Button android:id="@+id/facebook_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/half_margin"
@@ -58,7 +58,7 @@
         />
 
         <Button
-            android:id="@+id/prelogin_linute_login"
+            android:id="@+id/linute_sign_up"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/activity_horizontal_margin"
@@ -109,7 +109,7 @@
             android:layout_marginEnd="32dp"
             android:layout_marginStart="32dp"
             android:textColor="@color/fifty_white"
-            tools:text="By clicking this you agree to the following blah blah blah blah blah"
+            tools:text="By clicking this you agree to the following blah blah blah blahblah blah blah blahblah blah blah blah blah"
         />
 
     </LinearLayout>
