--- a/app/src/main/res/layout/fragment_linute_sign_up.xml
+++ b/app/src/main/res/layout/fragment_linute_sign_up.xml
@@ -125,22 +125,22 @@
                 android:textSize="14sp"
                 android:theme="@style/MyEditTextTheme"/>
 
-            <LinearLayout
-                android:id="@+id/signup_verify_layer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/signup_password"
-                android:gravity="center"
-                android:weightSum="9">
+            <!--<LinearLayout-->
+                <!--android:id="@+id/signup_verify_layer"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_below="@id/signup_password"-->
+                <!--android:gravity="center"-->
+                <!--android:weightSum="9">-->
 
-                <ImageView
-                    android:id="@+id/signup_get_verify_code_button"
-                    android:layout_width="0px"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="3"
-                    android:src="@drawable/create_sign_up_button"
-                />
-            </LinearLayout>
+                <!--&lt;!&ndash;<ImageView&ndash;&gt;-->
+                    <!--&lt;!&ndash;android:id="@+id/signup_get_verify_code_button"&ndash;&gt;-->
+                    <!--&lt;!&ndash;android:layout_width="0px"&ndash;&gt;-->
+                    <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
+                    <!--&lt;!&ndash;android:layout_weight="3"&ndash;&gt;-->
+                    <!--&lt;!&ndash;android:src="@drawable/create_sign_up_button"&ndash;&gt;-->
+                <!--&lt;!&ndash;/>&ndash;&gt;-->
+            <!--</LinearLayout>-->
 
 
             <ProgressBar
@@ -158,7 +158,6 @@
                 android:id="@+id/agree_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/signup_verify_layer"
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
