--- a/app/src/main/res/drawable/chat_item_me.xml
+++ b/app/src/main/res/drawable/chat_item_me.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
 
-    <solid android:color="@color/secondaryColor"/>
-    <corners android:radius="2dp"/>
+    <solid android:color="#00c3c1"/>
+    <corners android:radius="@dimen/message_bubble_corner_radius"/>
 </shape>
