--- a/app/src/main/res/layout/fragment_chat_list_item_date_header.xml
+++ b/app/src/main/res/layout/fragment_chat_list_item_date_header.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_horizontal"
-    android:textColor="#FF444444"
+    android:textColor="#FFA2A2A2"
     android:padding="4dp"
-    android:textSize="16sp"
-    android:textAllCaps="true"
-    />
+    android:textSize="14sp"
+    android:textAllCaps="false"
+    android:text="John Doe has left the group" />
