--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -88,5 +88,6 @@
     <dimen name="user_icon_corner_radius">8dp</dimen>
 
     <dimen name="comment_image_size">60dp</dimen>
+    <dimen name="message_bubble_corner_radius">8dp</dimen>
 
 </resources>
