--- a/app/src/main/res/layout/fragment_sign_up_email.xml
+++ b/app/src/main/res/layout/fragment_sign_up_email.xml
@@ -8,75 +8,105 @@
     tools:background="@color/colorPrimary">
 
     <TextView
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/activity_horizontal_margin"
-        android:text="what's your .edu email?"
+        android:text=".edu email and password"
         android:textAllCaps="true"
         android:textColor="@color/pure_white"
         android:textSize="40sp"
         android:textStyle="bold"
     />
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+    >
+
+        <EditText
+            android:id="@+id/email"
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_horizontal_margin"
+            android:layout_weight="1"
+            android:hint=".edu Email"
+            android:imeOptions="actionDone"
+            android:inputType="textEmailAddress"
+            android:lines="1"
+            android:singleLine="true"
+            android:textColor="@color/pure_white"
+            android:textColorHint="@color/thirtyfive_white"
+            android:textSize="14sp"
+            android:theme="@style/MyEditTextTheme"/>
+
+
+        <TextView
+            android:id="@+id/suggestions"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:text=" @ "
+            android:textColor="@color/pure_white"
+            android:textSize="24sp"
+            android:textStyle="bold"
+        />
+
+    </LinearLayout>
+
+
     <EditText
-        android:id="@+id/email"
+        android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/activity_horizontal_margin"
-        android:hint=".edu email"
+        android:hint="Password for Tapt"
         android:imeOptions="actionDone"
-        android:inputType="textEmailAddress"
+        android:inputType="textPassword"
         android:lines="1"
         android:singleLine="true"
-        android:textColor="@color/fifty_white"
+        android:textColor="@color/pure_white"
         android:textColorHint="@color/thirtyfive_white"
         android:textSize="14sp"
         android:theme="@style/MyEditTextTheme"/>
 
 
-    <TextView
-        android:id="@+id/suggest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:text="Click to add domain"
-        android:textColor="@color/pure_white"
-        android:textSize="@dimen/body_font_size"
-        android:textStyle="bold"
-    />
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
+    <android.support.v4.widget.Space
         android:layout_width="match_parent"
         android:layout_height="0px"
-        android:layout_marginBottom="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+    />
 
 
     <FrameLayout android:layout_width="wrap_content"
-                 android:layout_height="wrap_content">
+                 android:layout_height="wrap_content"
+                 android:layout_gravity="center_horizontal"
+                 android:layout_marginBottom="32dp"
+    >
 
         <Button
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal|bottom"
-            android:layout_marginBottom="32dp"
             android:background="@drawable/sign_up_button"
             android:text="3 of 4"
             android:textColor="@drawable/signup_button_text"
         />
+
 
         <ProgressBar
             android:id="@+id/progress"
             style="?android:progressBarStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:visibility="gone"/>
 
     </FrameLayout>
 
