--- a/app/src/main/res/layout/square_camera_edit_save.xml
+++ b/app/src/main/res/layout/square_camera_edit_save.xml
@@ -142,7 +142,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="top|center_horizontal"
         android:padding="12dp"
-        android:src="@mipmap/trash_can_closed"
+        android:src="@drawable/trash_can_closed"
         android:visibility="gone"/>
 
     <android.support.v7.widget.RecyclerView
@@ -163,7 +163,7 @@
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:layout_gravity="center"
-            android:src="@mipmap/sticker_drawer"/>
+            android:src="@drawable/sticker_drawer"/>
 
         <com.linute.linute.UtilsAndHelpers.SquareFrameLayout
             android:layout_width="wrap_content"
